# whisper-daemon

./: README.md  pyproject.toml
docs/: architecture.md  prd.md
extension/: background.js  content.js  manifest.json  offscreen.html  offscreen.js  overlay.js  pcm-processor.js  popup.html  popup.js
src/whisper_daemon/: __main__.py  activity_monitor.py  audio_server.py  autostart.py  config.py  daemon.py  diarize_merge.py  diarizer.py  events.py  formats.py  hotkey.py  meeting_recorder.py  menubar.py  paster.py  recorder.py  screen_capture.py  sounds.py  telemetry.py  transcriber.py  tts.py  vad.py
